travis changed to follow file movement

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ install:
   - pip install pylint circuitpython-build-tools
 
 script:
-  - pylint adafruit_ssd1306/*.py
+  - pylint adafruit_ssd1306.py
   - ([[ ! -d "examples" ]] || pylint --disable=missing-docstring,invalid-name examples/*.py)
   - circuitpython-build-bundles --filename_prefix adafruit-circuitpython-ssd1306 --library_location .
